--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,5 +1,19 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(Playing LANGUAGES CXX)
+project(IDZ1_WAV_generation LANGUAGES CXX)
 
-add_executable(${PROJECT_NAME}WITHCMAKE main.cpp)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+find_package(Qt5Core)
+
+add_executable(IDZ1_WAV_generation
+  main_1.cpp
+)
+target_link_libraries(IDZ1_WAV_generation Qt5::Core)
